--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "type-writer",
+  "name": "@vdegenne/type-writer",
   "description": "Web Component that simulates someone typing live on the keyboard.",
   "version": "0.0.1",
   "license": "Apache-2.0",
